# sts-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  README_JA.md  build.ps1  build.rs  icon.icns
.cargo/: config.toml
.github/workflows/: release.yml
docs/: timesheet.py
src/: app.rs  document.rs  i18n.rs  lib.rs  main.rs  settings.rs  theme.rs  video_utils.rs
src/formats/: ae_keyframe.rs  csv.rs  image_sequence.rs  mod.rs  sts.rs  sxf.rs  tdts.rs  xdts.rs
src/models/: keyframe.rs  layer.rs  mod.rs  timesheet.rs
src/ui/: about.rs  cell.rs  curve_editor.rs  mod.rs  player.rs
