[package]
name = "sts-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "1.0"

eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.29", optional = true }


rfd = { version = "0.15", optional = true }

itoa = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"

[features]
default = ["gui-egui"]
gui-egui = ["eframe", "egui", "rfd"]
# gui-iced = ["iced", "rfd"]

[[bin]]
name = "sts"
path = "src/main.rs"
required-features = ["gui-egui"]


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.dev]
opt-level = 1
