[package]
name = "sts-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }

eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.29", optional = true }


rfd = { version = "0.15", optional = true }

itoa = { version = "1.0", default-features = false }
encoding_rs = "0.8"
regex = { version = "1.10", default-features = false, features = ["std", "perf", "unicode-perl"] }
csv = { version = "1.3", default-features = false }

image = { version = "0.25", default-features = false, features = ["png"] }

# Memory optimization dependencies
smallvec = { version = "1.11", default-features = false }
ahash = { version = "0.8", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"

[features]
default = ["gui-egui"]
gui-egui = ["eframe", "egui", "rfd"]
# gui-iced = ["iced", "rfd"]

[[bin]]
name = "sts"
path = "src/main.rs"
required-features = ["gui-egui"]


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1
